added more examples

--- a/buider/sensors.conf
+++ b/buider/sensors.conf
@@ -32,7 +32,7 @@ redirect_stderr=true
 
 ;[program:temperature_humidity_sync]
 ;command=/var/sensors/examples/temperature_humidity_sync.py
-;directory=/home/agmartinez/sensor/
+;directory=/var/sensors/
 ;user=root
 ;autostart=true
 ;autorestart=true
@@ -40,7 +40,7 @@ redirect_stderr=true
 
 ;[program:temperature_humidity_writer]
 ;command=/var/sensors/examples/temperature_humidity_writer.py
-;directory=/home/agmartinez/sensor/
+;directory=/var/sensors/
 ;user=pi
 ;autostart=true
 ;autorestart=true
