--- a/examples/settings.example.cfg
+++ b/examples/settings.example.cfg
@@ -4,3 +4,9 @@ carbon_port = 2003
 
 [sensor_termopar]
 device_number = 28-01155244f3ff
+
+[two_point_calibration]
+raw_low = 0
+raw_hight = 0
+ref_low = 0
+ref_high = 0
