--- a/examples/settings.example.cfg
+++ b/examples/settings.example.cfg
@@ -5,7 +5,13 @@ carbon_port = 2003
 [sensor_termopar]
 device_number = 28-01155244f3ff
 
-[two_point_calibration]
+[two_point_calibration_1]
+raw_low = 0
+raw_hight = 0
+ref_low = 0
+ref_high = 0
+
+[two_point_calibration_2]
 raw_low = 0
 raw_hight = 0
 ref_low = 0
