--- a/builder/sensors.conf
+++ b/builder/sensors.conf
@@ -6,29 +6,13 @@ autostart=true
 autorestart=true
 redirect_stderr=true
 
-[program:termopar_1_writer]
-command=/var/sensors/examples/termopar_1_writer.py
-directory=/var/sensors/
-user=pi
-autostart=true
-autorestart=true
-redirect_stderr=true
-
-[program:door_sync]
-command=/var/sensors/examples/door_sync.py
-directory=/var/sensors/
-user=root
-autostart=true
-autorestart=true
-redirect_stderr=true
-
-[program:door_writer]
-command=/var/sensors/examples/door_writer.py
-directory=/var/sensors/
-user=pi
-autostart=true
-autorestart=true
-redirect_stderr=true
+;[program:door_sync]
+;command=/var/sensors/examples/door_sync.py
+;directory=/var/sensors/
+;user=root
+;autostart=true
+;autorestart=true
+;redirect_stderr=true
 
 ;[program:temperature_humidity_sync]
 ;command=/var/sensors/examples/temperature_humidity_sync.py
@@ -38,10 +22,3 @@ redirect_stderr=true
 ;autorestart=true
 ;redirect_stderr=true
 
-;[program:temperature_humidity_writer]
-;command=/var/sensors/examples/temperature_humidity_writer.py
-;directory=/var/sensors/
-;user=pi
-;autostart=true
-;autorestart=true
-;redirect_stderr=true
