fixed build in sensors

--- a/builder/sensors.conf
+++ b/builder/sensors.conf
@@ -6,13 +6,13 @@ autostart=true
 autorestart=true
 redirect_stderr=true
 
-;[program:door_sync]
-;command=/var/sensors/examples/door_sync.py
-;directory=/var/sensors/
-;user=root
-;autostart=true
-;autorestart=true
-;redirect_stderr=true
+[program:door_sync]
+command=/var/sensors/examples/door_sync.py
+directory=/var/sensors/
+user=root
+autostart=true
+autorestart=true
+redirect_stderr=true
 
 ;[program:temperature_humidity_sync]
 ;command=/var/sensors/examples/temperature_humidity_sync.py
