--- a/examples/settings.example.cfg
+++ b/examples/settings.example.cfg
@@ -7,12 +7,12 @@ device_number = 28-01155244f3ff
 
 [two_point_calibration_1]
 raw_low = 0
-raw_hight = 0
+raw_high = 0
 ref_low = 0
 ref_high = 0
 
 [two_point_calibration_2]
 raw_low = 0
-raw_hight = 0
+raw_high = 0
 ref_low = 0
 ref_high = 0
